--- a/public/css/oldstyles.css
+++ b/public/css/oldstyles.css
@@ -5,6 +5,11 @@ html * {
 	box-sizing: border-box;
 	text-decoration: none;
 	list-style-type: none;
+	font-family: Lato;
+}
+
+body{
+	background: linear-gradient(to left, hsl(130,100%,8%), hsl(130,90%,16%));
 }
 
 /*-=-=-=-=-=-=-=-=-
@@ -20,11 +25,14 @@ MAIN PAGE STYLING
 	height: 7rem;
 	padding-left: 1rem;
 	padding-right: 1rem;
+	background: linear-gradient(to right, hsl(130,100%,8%), hsl(130,90%,16%));
 }
 
 .static-header>h1{
 	display: inline-block;
 	font-size: 3rem;
+	font-family: 'Patrick Hand', sans-serif;
+	color: white;
 	line-height: 7rem;
 	letter-spacing: 3px;
 }
@@ -48,17 +56,25 @@ input,textarea{
 	border-radius: 4px;
 	border-style: none;
 	font-size: 0.9rem;
+	
 }
 
 .button{
 	height: 1.75rem;
+	color: white;
 	border: none;
+	background-color: hsl(130,35%,47%);
 	border-radius: 4px;
 	padding: 0.2rem 1.5rem;
 }
 
 .button:hover{
 	color: hsl(130,100%,8%);;
+}
+
+.form-button{
+	margin: auto;
+	display: block;
 }
 
 textarea{
@@ -112,6 +128,17 @@ NAVIGATION STYLES
 	top: 7rem;
 	z-index: 10;
 	position: fixed;
+	color: white;
+	box-shadow: 0px 5px 19px hsl(130,90%,8%);
+	background: linear-gradient(to right, hsl(130,35%,60%), hsl(130,35%,47%), hsl(130,35%,35%));
+}
+
+.main-nav a{
+	color: white;
+}
+
+.main-nav a:hover{
+	color: hsl(130,100%,8%);
 }
 
 /*-=-=-=-=-=-=
@@ -141,9 +168,13 @@ h3{
 	top: 11.5rem;
 	max-width: 800px;
 	margin: auto;
+	/*background-color: hsl(130,60%,94%);*/
+	background: radial-gradient(hsl(130,60%,96%), hsl(130,60%,94%), hsl(130,60%,88%));
 	height: 100%;
 	padding: 3rem;
 	margin-bottom: 1.5rem;
+	box-shadow: -8px 9px 19px hsl(130,90%,8%);
+	color: hsl(130,100%,8%);
 }
 
 .view input{
