--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,11 +2,10 @@ html * {
 	font-family: 'Khula', sans-serif;
 	list-style-type: none;
 	font-size: 18px;
-	color: rgb(4,0,14);
 }
 
 body{
-	background-color: hsl(254,32%,91%);
+	background-color: hsl(254,32%,81%);
 }
 
 h1{
@@ -15,8 +14,8 @@ h1{
 
 hr{
 	width: 100%; 
-	border-color: #100535;
-	height: 3px;
+	height: 4px;
+	border-top: 2px dashed #100535;
 }
 
 .title{
@@ -33,7 +32,7 @@ hr{
 }
 
 .col-sm-4{
-	max-width: 33%;
+	max-width: 28%;
 }
 
 
@@ -46,9 +45,14 @@ h3{
 }
 
 .view{
-	max-width: 950px;
+	max-width: 900px;
 	margin: auto;
 	display: block;
+	padding: 0px;
+}
+
+.container{
+	padding: 0px;
 }
 
 .login-form{
@@ -99,11 +103,83 @@ textarea{
 	height: 30rem;
 }
 
+
+textarea{
+	border-radius: 5px;
+	border-style: none;
+}
+
 @media screen and (max-width: 500px){
-
-	.intro-page{
-		width: 90vw;
-		margin: 0.5rem;
+	.title{
+		width: 100%;
+		border-radius: 0px;
 	}
+}
+/*-=-=-=
+BROWSE
+-=-=-=*/
 
+.browse-content{
+	background-color: purple;
+	border: 4px dashed black;
+}
+
+.browse-heading{
+	padding: 0.5rem 0rem 1rem 2rem;
+	font-size: 4.5rem;
+	font-family: 'Shadows Into Light', cursive;
+	text-align: center;	
+}
+
+.content-purple{
+	border: dashed 3px #100535;
+	background-color: hsl(254,32%,63%);
+	color: #04000E;
+	border-radius: 10px 10px 10px 10px;
+}
+
+.content-purple h3{
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 3rem;
+	letter-spacing: 2px;
+}
+
+.content-odd h3{
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 3rem;
+	letter-spacing: 2px;
+}
+
+.content-even h3{
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 3rem;
+	letter-spacing: 2px;
+}
+
+/*-=-=-=-=
+COMMENTS
+-=-=-=-=*/
+
+.content-odd{
+	border: dashed 3px #013B46;
+	background-color: hsl(189,46%,69%);
+	color: #000505;
+	border-radius: 10px 10px 10px 10px;
+}
+
+.content-even{
+	border: dashed 3px #790A58;
+	background-color: hsl(317,68%,78%);
+	color: #29001E;
+	border-radius: 10px 10px 10px 10px;
+}
+
+.content-box{
+	margin: 2rem;
+	padding: 1rem;	
+}
+
+.content-box h3{
+	margin-top: 0.5rem;
+	margin-bottom: 0.25rem;
 }
