--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,11 +4,46 @@ html * {
 	font-size: 18px;
 }
 
+
+a{
+	color: #790A5B;
+}
+
+input a{
+	color: white;
+}
+
+input a:hover{
+	color: white;
+	text-decoration: none;
+}
+
+button a{
+	color: white;
+}
+
+button a:hover{
+	color: white;
+	text-decoration: none;
+}
+
 body{
 	background-color: hsl(254,32%,81%);
 }
 
+h1,h2,h3{
+	font-family: "Shadows Into Light", cursive;
+}
+
 h1{
+	font-size: 4rem;
+}
+
+h2{
+	font-size: 3.5rem;
+}
+
+h3{
 	font-size: 3rem;
 }
 
@@ -33,15 +68,6 @@ hr{
 
 .col-sm-4{
 	max-width: 28%;
-}
-
-
-h2{
-	font-size: 3rem;
-}
-
-h3{
-	font-size: 3rem;
 }
 
 .view{
@@ -87,9 +113,15 @@ textarea{
 	display: block;
 	margin-bottom: 1.5rem;
 	width: 100%;
-	padding: 0.2rem;
+	padding: 0.5rem;
 	margin-top: 0.5rem;
 }
+
+textarea,input{
+	margin-bottom: 3rem;
+}
+
+
 
 .small-area{
 	height: 5rem;
@@ -103,6 +135,9 @@ textarea{
 	height: 30rem;
 }
 
+.radio{
+	margin-left: 4rem;
+}
 
 textarea{
 	border-radius: 5px;
@@ -126,9 +161,9 @@ BROWSE
 
 .browse-heading{
 	padding: 0.5rem 0rem 1rem 2rem;
-	font-size: 4.5rem;
 	font-family: 'Shadows Into Light', cursive;
-	text-align: center;	
+	text-align: center;
+	margin: 0px;	
 }
 
 .content-purple{
@@ -140,19 +175,16 @@ BROWSE
 
 .content-purple h3{
 	font-family: 'Shadows Into Light', cursive;
-	font-size: 3rem;
 	letter-spacing: 2px;
 }
 
 .content-odd h3{
 	font-family: 'Shadows Into Light', cursive;
-	font-size: 3rem;
 	letter-spacing: 2px;
 }
 
 .content-even h3{
 	font-family: 'Shadows Into Light', cursive;
-	font-size: 3rem;
 	letter-spacing: 2px;
 }
 
@@ -181,5 +213,23 @@ COMMENTS
 
 .content-box h3{
 	margin-top: 0.5rem;
-	margin-bottom: 0.25rem;
+	margin-bottom: 1rem;
+}
+
+.info-box{
+	padding: 3rem;
+	margin-top: 2rem;
+}
+
+.info-box h2{
+	margin-top: 0px;
+}
+
+.submission-content{
+	max-width: 750px;
+	padding: 2rem;
+	background-color: hsl(155,0%,97%);
+	line-height: 2.75rem;
+	box-shadow: 3px 3px 30px 0px #100535;
+	border-radius: 4px;
 }
