--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 html * {
-	/*font-family: 'Khula', sans-serif;*/
-	font-family: sans-serif;
+	font-family: 'Khula', sans-serif;
 	list-style-type: none;
 	font-size: 18px;
 }
