--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,10 +51,12 @@ button a:hover{
 }
 
 .fixed-header h1{
-	margin-top: 0px;
-	padding: 2rem;
-	padding-bottom: 0rem;
+	margin: 1rem;
+	padding: 0rem 0.4rem 0rem 2rem;
 	display: inline-block;
+	font-family: Jura;
+	font-size: 4rem;
+	border-right: 1px solid white;
 }
 
 .fixed-header form{
@@ -91,6 +93,15 @@ button a:hover{
 	margin: 0.25rem;
 }
 
+.sort-buttons{
+	text-align: center;
+}
+
+.sort-buttons ul{
+	padding: 0px;
+	margin: 0px;
+}
+
 
 /*END TITLE AND NAVIGATION*/
 
@@ -118,26 +129,23 @@ li ul{
 
 /*END DROPDOWN*/
 
-h1,h2,h3{
-	font-family: "Shadows Into Light", cursive;
-}
-
-h1{
-	font-size: 4rem;
+h2,h3{
+	letter-spacing: -1px;
 }
 
 h2{
-	font-size: 3.5rem;
+	font-size: 2.75rem;
 }
 
 h3{
-	font-size: 3rem;
+	font-size: 2.5rem;
 }
 
 hr{
 	width: 100%; 
 	height: 4px;
 	border-top: 2px dashed #100535;
+	margin: 0.5rem;
 }
 
 .view{
@@ -253,7 +261,7 @@ textarea{
 }
 
 .browse-heading{
-	padding: 0.5rem 0rem 1rem 2rem;
+	padding: 1rem 0rem 1rem 2rem;
 	text-align: center;
 	margin: 0px;	
 }
@@ -292,8 +300,8 @@ textarea{
 }
 
 .content-box h3{
-	margin-top: 0.5rem;
-	margin-bottom: 1rem;
+	margin-top: 0rem;
+	margin-bottom: 0rem;
 }
 
 .info-box{
